--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-
+<properties>
+<maven.compiler.source>1.6</maven.compiler.source>
+<maven.compiler.target>1.6</maven.compiler.target>
+</properties>
 	</dependencies>
-	
 </project>
