--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 	<packaging>war</packaging>
 	<version>4.0.0</version>
 	<name>simple-app</name>
-	<url>http://maven.apache.org</url>	
+	<url>http://maven.apache.org</url>
+     <properties>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+     </properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -14,6 +18,5 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 </project>
